welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: reassignment to val
      die1=die1+1
          ^withoutDoubles:8: error: reassignment to val
        die1=1
            ^